# WMI_training_MSMQ

./: .gitignore  README.md  build_and_upload_sprint.md  pyproject.toml
extension/: extension.yaml
extension/dashboards/: msmq_overview.json
