[tool.poetry]
name = "msmq_extension"
version = "0.1.0"
description = ""
authors = ["Ben Davidson <32000249+tukanuk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
dt-cli = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
